--- a/tableqa/schema/GDP at current prices (AED)-Production Approach.json
+++ b/tableqa/schema/GDP at current prices (AED)-Production Approach.json
@@ -9,13 +9,13 @@
         },
         {
         "name": "Year",
-        "type": "Year",
-        "query": "which years"
+        "type": "Year"
+
         },
         {
         "name": "value",
-        "type": "Decimal",
-        "query": "how much value"
+        "type": "Decimal"
+
         }
 
     ]
