--- a/tableqa/schema/GDP at current prices (AED)-Production Approach.json
+++ b/tableqa/schema/GDP at current prices (AED)-Production Approach.json
@@ -1,22 +1,5 @@
 {
     "name": "gdp_at_current_price",
-    "keywords":["gdp","current price gdp","gross domestic product"],
-    "columns":
-    [
-        {
-        "name": "index",
-        "type": "Integer"
-        },
-        {
-        "name": "Year",
-        "type": "Year"
+    "keywords":["gdp","current price gdp","gross domestic product"]
 
-        },
-        {
-        "name": "value",
-        "type": "Decimal"
-
-        }
-
-    ]
 }
