changing "priority" key to "summable"

--- a/tableqa/schema/Communicable Diseases - Data.json
+++ b/tableqa/schema/Communicable Diseases - Data.json
@@ -18,7 +18,7 @@
         {
         "name": "Cases",
         "keywords": ["number of cases","occurances","total cases"],
-        "priority":"True"
+        "summable":"True"
         }
     ]
 }
