--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,8 @@ matrix:
 install:
   - pip install -e .[tests]
 
-script: pytest
+
+script:
+  - python -m nltk.downloader all
+  - PYTHONPATH=$PWD:$PYTHONPATH py.test tests/
+
