refactor and bug fixes + version update to 0.0.2

--- a/tableqa/schema/Communicable Diseases - Data.json
+++ b/tableqa/schema/Communicable Diseases - Data.json
@@ -1,5 +1,5 @@
 {
-    "name": "communicable_diseases",
+    "name": "communicable diseases",
     "keywords":["Communicable diseases","Diseases"],
     "columns":
     [
