--- a/tableqa/schema/GDP at current prices (AED)-Production Approach.json
+++ b/tableqa/schema/GDP at current prices (AED)-Production Approach.json
@@ -1,5 +1,5 @@
 {
-    "name": "gdp_at_current_price",
+    "name": "gdp at current price",
     "keywords":["gdp","current price gdp","gross domestic product"]
 
 }
