--- a/tableqa/requirements.txt
+++ b/tableqa/requirements.txt
@@ -1,8 +1,19 @@
+Cython==3.0.3
 responder
-graphql-core==2.2.1
+graphql-core==2.3.2
 graphene==2.1.8
-transformers[tf-cpu]==3.0.2
+numpy==1.18.5
+matplotlib==3.3.4
+pandas==1.1.5
+cryptography==41.0.4
+protobuf==3.20.2
+click==7.1.2
+tokenizers==0.8.1.rc2
+tensorflow-cpu==2.3.1
+tensorflow_hub
 rake_nltk
 nltk
-sqlalchemy
-sentence_transformers==0.3.0
+sqlalchemy_utils
+sqlalchemy==1.3.24
+awswrangler==1.7.0
+transformers[tf-cpu]==3.1.0
